# vector-inference

./: .buildinfo  .envrc  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  MODEL_TRACKING.md  README.md  api.html  codecov.yml  configs.md  genindex.html  index.html  kwaak.toml  launch_server_llm.sh  launch_server_multimodal.sh  mkdocs.yml  objects.inv  openai_entrypoint.sh  openai_entrypoint.slurm.sh  page.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  sglang.Dockerfile  slurm.env  test.sh  user_guide.html  vector-inference.def  venv.sh  versions.json  vllm.Dockerfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  model-request.md
.github/workflows/: code_checks.yml  docker.yml  docs.yml  docs_build.yml  docs_deploy.yml  integration_tests.yml  publish.yml  unit_tests.yml
0.6.0/user_guide/: index.html
0.6.1/: 404.html
0.6.1/search/: search_index.json
0.6.1/stylesheets/: extra.css
0.7.0/: objects.inv
0.7.0/api/: index.html
0.7.0/contributing/: index.html
0.7.0/user_guide/: index.html
0.7.1/: 404.html
0.7.1/overrides/partials/: logo.html
0.7.2/: 404.html  index.html
0.7.2/search/: search_index.json
0.7.3/: index.html  sitemap.xml
0.7.3/api/: index.html
0.7.3/search/: search_index.json
0.7.3/user_guide/: index.html
0.8.0/: sitemap.xml
0.8.0/search/: search_index.json
0.8.1/: 404.html  index.html
0.8.1/contributing/: index.html
0.8.1/search/: search_index.json
0.8.1/user_guide/: index.html
0.9.0/: 404.html  objects.inv  sitemap.xml
0.9.0/api/: index.html
0.9.0/search/: search_index.json
0.9.0/user_guide/: index.html
_modules/: index.html
_modules/aieng_template/: bar.html  foo.html
_modules/vec_inf/client/: _config.html  _models.html  api.html
_sources/: api.rst.txt  index.md.txt
_sources/reference/api/: aieng_template.foo.rst.txt  vec_inf.client.api.rst.txt  vec_inf.client.rst.txt
aieng_template/: bar.py  foo.py
api/: index.html
docs/: Makefile  api.md  contributing.md  index.md  user_guide.md
docs/overrides/partials/: copyright.html
docs/source/: conf.py  index.md  user_guide.md
docs/source/_templates/: base.html  page.html
docs/stylesheets/: extra.css
examples/: README.md  examples.md  inference.py  inference.sh  logits.py
examples/api/: advanced_api_usage.py  advanced_usage.py  api_usage.py  basic_usage.py
examples/inference/llm/: chat_completions.py  completions.py  completions.sh
examples/inference/text_embedding/: embeddings.py
examples/inference/vlm/: vision_completions.py
examples/logits/: logits.py
examples/slurm_dependency/: README.md  downstream_job.sbatch  run_downstream.py  run_workflow.sh
main/: 404.html  index.html  objects.inv  sitemap.xml
main/api/: index.html
main/contributing/: index.html
main/search/: search_index.json
main/user_guide/: index.html
models/: README.md  find_port.sh  multinode_vllm.slurm  vllm.slurm  vlm_vllm.slurm
models/codellama/: README.md  config.sh
models/command-r/: config.sh  launch_server.sh
models/dbrx/: README.md  config.sh  launch_server.sh
models/llama2/: .vllm_api_base_url  README.md  config.sh  launch_server.sh  vllm.slurm
models/llama3/: README.md  config.sh  launch_server.sh
models/llava-1.5/: README.md  config.sh  launch_server.sh
models/llava-next/: README.md  config.sh  launch_server.sh
models/mistral/: README.md  config.sh  launch_server.sh
models/mixtral/: README.md  config.sh  launch_server.sh  vllm.slurm
profile/: avg_throughput.py  gen.py
reference/api/: aieng_template.bar.html  aieng_template.foo.html  aieng_template.html  index.html  vec_inf.api.client.html  vec_inf.api.html  vec_inf.api.models.html  vec_inf.api.utils.html  vec_inf.client.api.html  vec_inf.client.html
search/: search_index.json
src/: find_port.sh  launch_server.sh  launch_server_llm.sh  multinode_vllm.slurm  vllm.slurm  vlm_vllm.slurm
stylesheets/: extra.css
tests/: __init__.py  test_imports.py
tests/aieng_template/: test_bar.py  test_foo.py  test_foo_bar.py
tests/vec_inf/: __init__.py
tests/vec_inf/api/: README.md  __init__.py  test_client.py  test_examples.py  test_models.py
tests/vec_inf/cli/: __init__.py  test_cli.py  test_helper.py  test_utils.py
tests/vec_inf/client/: __init__.py  test_api.py  test_engine_selection.py  test_examples.py  test_helper.py  test_models.py  test_slurm_script_generator.py  test_utils.py  test_vars.env
tests/vec_inf/shared/: test_utils.py
user_guide/: index.html
vec_inf/: README.md  __init__.py  embed.slurm  find_port.sh  launch_server.sh  multinode_vllm.slurm  vllm.slurm  vlm_vllm.slurm
vec_inf/_shared/: __init__.py
vec_inf/api/: __init__.py  _helper.py  _models.py  client.py  models.py  utils.py
vec_inf/cli/: __init__.py  _cli.py  _config.py  _helper.py  _models.py  _slurm_script_generator.py  _utils.py  _vars.py
vec_inf/client/: __init__.py  _client_vars.py  _config.py  _exceptions.py  _helper.py  _models.py  _slurm_script_generator.py  _slurm_templates.py  _slurm_vars.py  _utils.py  _vars.py  api.py  config.py  models.py  oai_compatibility.py  slurm_vars.py
vec_inf/config/: README.md  environment.yaml  models.yaml  my_models.yaml  slurm.yaml
vec_inf/embedding/: openai_api_server.py
vec_inf/embeddings/: openai_api_server.py
vec_inf/models/: README.md  models.csv
vec_inf/models/CodeLlama/: README.md
vec_inf/models/Meta-Llama-3/: README.md
vec_inf/models/Meta-Llama-3.1/: config.sh
vec_inf/models/Mistral/: README.md
vec_inf/models/Phi-3/: README.md
vec_inf/models/c4ai-command-r/: README.md  config.sh
vec_inf/models/codellama/: config.sh
vec_inf/models/command-r/: config.sh
vec_inf/models/dbrx/: config.sh
vec_inf/models/gemma-2/: README.md  config.sh
vec_inf/models/gemma2/: config.sh
vec_inf/models/llama-2/: config.sh
vec_inf/models/llama-3.1/: .Meta-Llama-3.1-8B-Instruct_url  README.md  config.sh
vec_inf/shared/: __init__.py  _exceptions.py  _helper.py  _models.py  _utils.py  _vars.py  helper.py  models.py  utils.py
(+16 files in other folders)
