[tool.poetry]
name = "vec-inf"
version = "0.4.0"
description = "Efficient LLM inference on Slurm clusters using vLLM."
authors = ["Marshall Wang <marshall.wang@vectorinstitute.ai>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.0"
rich = "^13.7.0"
pandas = "^1.15.0"
numpy = "^1.24.0"
vllm = { version = "^0.6.0", optional = true }
vllm-nccl-cu12 = { version = ">=2.18,<2.19", optional = true }
ray = { version = "^2.9.3", optional = true }
cupy-cuda12x = { version = "12.1.0", optional = true }

[tool.poetry.extras]
dev = ["vllm", "vllm-nccl-cu12", "ray", "cupy-cuda12x"]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.11.1"
pytest = "^8.3.2"
pre-commit = "^3.8.0"
pip-audit = "^2.7.3"
types-requests = "^2.32.0.20240712"

[tool.poetry.scripts]
vec-inf = "vec_inf.cli._cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
